update toggle methods

--- a/changecolor/changeColor.html
+++ b/changecolor/changeColor.html
@@ -4,15 +4,23 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-
+    <style type="text/css">
+        .green {
+            background: green;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Hello world!!!</h1>
+    
+    <h6>Click a button to change background color!</h6>
 
-    <button>CHANGE COLOR!!!</button>
-    <script type="text/javascript" src="changeColor.js">
-    </script>
+    <button name='btn1'>CHANGE COLOR!!!</button>
+
+    <button name='btn2'>Change color by toggling css class</button>
+
+    <script type="text/javascript" src="changeColor.js"></script>
 
 </body>
 
